package com.bogdan.kolomiiets.tasks.Task_08_Flowers;

public enum FlowersName {
    ROSE,
    TULIP,
    CHAMOMILE,
    CARNATION,
    HYACINTH;
}
