package com.bogdan.kolomiiets.tasks.Task_08_Flowers;

public class Main {
    public static void main(String[] args) {
        FlowerShop shop = new FlowerShop();
        shop.makeBouquet(60);
    }
}
