@startuml

title __TASK_08_FLOWERS's Class Diagram__\n

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_08_Flowers {
      class Bouquet {
          - flowerBouquet : ArrayList<Flower>
          - flowerCount : int
          + setFlowerCount()
          + getFlowerCount()
          + addFlowerIntoBouquet()
          + removeFlower()
          - getBouquetPrice()
          + toString()
      }
    }
  }
  

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_08_Flowers {
      class CompareFlower {
          + compare()
      }
    }
  }
  

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_08_Flowers {
      class Flower {
          - priceForPiece : int
          - count : int
          + Flower()
          + getCount()
          + setCount()
          + getPriceForPiece()
          + toString()
      }
    }
  }
  

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_08_Flowers {
      class FlowerShop {
          - flowers : ArrayList<Flower>
          + FlowerShop()
          - addFlowers()
          # makeBouquet()
          - getMinPrice()
          - checkFlowersCount()
      }
    }
  }
  

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_08_Flowers {
      enum FlowersName {
        ROSE
        TULIP
        CHAMOMILE
        CARNATION
        HYACINTH
      }
    }
  }
  

  package com.bogdan.kolomiiets.tasks {
    package com.bogdan.kolomiiets.tasks.Task_08_Flowers {
      class Main {
          {static} + main()
      }
    }
  }
  

  CompareFlower -up-|> Comparator
  Flower o-- FlowersName : flowerName


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
